# bitmex-api

./: CMakeLists.txt  README.md  format.sh
examples/: CMakeLists.txt  monitor.cpp
lib/: CMakeLists.txt
lib/include/bitmex/: bitmex.hpp
